--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -121,5 +121,8 @@
   }
   body {
     @apply bg-background text-foreground;
+    code {
+      @apply text-xs bg-muted rounded-sm px-1;
+    }
   }
 }
