feat: Add saves page & fix: MinecraftAE issue
feat: Add saves page and saves deleting feature
fix: MinecraftAE does not support bold, italic and Chinese characters
fix(api): Sending response twice if setting properties gets exception
fix(api): Sending response twice if a log to delete is not found

--- a/frontend/app/formatting-codes.css
+++ b/frontend/app/formatting-codes.css
@@ -4,6 +4,8 @@
 /* see https://minecraft.fandom.com/wiki/Formatting_codes */
 
 .cc-root {
+  @apply text-lg;
+
   .cc-0 {
     @apply text-[#000];
   }
@@ -69,7 +71,8 @@
   }
 
   .cc-l {
-    @apply font-bold;
+    /* weight 600 */
+    @apply font-semibold;
   }
 
   .cc-m {
@@ -82,5 +85,9 @@
 
   .cc-o {
     @apply italic;
+  }
+
+  .cc-k {
+    font-family: var(--font-minecraft-ae-old);
   }
 }
