fix: Uploaded save is processed wrongly & feat: Download save from server

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -121,7 +121,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    a {
+    span a {
       @apply underline underline-offset-2;
     }
     code {
